#15 - Tests for the get method
